# 3_llm_tg_bot

./: .gitignore  README.md  docker-compose.yml
auth_service/: .env  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: deps.py  router.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  security.py
auth_service/app/db/: models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: user.py
auth_service/app/usecases/: auth.py
auth_service/tests/: test_auth_flow.py  test_auth_negative.py  test_security.py
bot_service/: .env example  pyproject.toml  pytest.ini  установка
bot_service/app/: main.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: llm_tasks.py
bot_service/app/tests/: test_jwt.py
bot_service/tests/: conftest.py  test_handlers.py  test_openrouter_client.py
